--- a/index.html
+++ b/index.html
@@ -75,6 +75,103 @@
     <main class="main">
 
     </main>
+    <!--Home -->
+    <section class="home section" id="home">
+        <div class="home__container container grid">
+            <div class="home__content grid">
+                <a href="https://www.linkedin.com/in/michael-massey-6aa237227/" target="_blank" class="home__social-icon">
+                    <i class="uil uil-linkedin"></i>
+                </a>
+                <a href="https://www.youtube.com/channel/UCvt_dgfDLH6KZxfwQNnD4Dw" target="_blank" class="home__social-icon">
+                    <i class="uil uil-bookmark"></i>
+                </a>
+                <a href="https://github.com/RanmaOVA" target="_blank" class="home__social-icon">
+                    <i class="uil uil-github"></i>
+                </a>
+            </div>
+
+            <div class="home__img">
+                <svg viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <mask id="mask0" mask-type="alpha">
+                        <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
+                        130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
+                        97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
+                        0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
+                    </mask>
+                    <g mask="url(#mask0)">
+                        <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
+                        165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
+                        129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
+                        -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
+                        <image class="home__blob-img" x='0' y='-5' xlink:href="img/channels4_profile_1.jpg"/>
+                    </g>
+                </svg>
+            </div>
+
+            <div class="home__data">
+                <h1 class="home__title">Welcome, tis is my portifolio Website.</h1>
+                <h3 class="home__subtitle">I am an Fullstack developer</h3>
+                <p class="home__description"> high level </p>
+                <a href="#contact" class="button button--flex">
+                    Contact me here <i class="uil uil-inbox"></i>
+                </a>
+            </div>
+        </div>
+
+        <div class="home__scroll">
+            <a href="#about" class="home__scroll-button button--flex">
+                <i class="uil uil-mouse house_scroll-mouse"></i>
+                <span class="home_scroll-name">Scroll down</span>
+                <i class="uil uil-arrow-down home_scroll-arrow"></i>
+
+                <div class="about__container container grid">
+                    <img src="" alt="" class="about__img">
+
+                    <div class="about__data">
+                        <p class="about__description"> Web developer</p>
+
+                        <div class="about__info">
+                            <div>
+                                <span class="about__info-title">08+</span>
+                                <span class="about__info-name">years of experience</span>
+                            </div>
+
+                            <div>
+                                <span class="about__info-title">10+</span>
+                                <span class="about__info-name">Completed/Ongoing Projects</span>
+                            </div>
+
+                            <div>
+                                <span class="about__info-title">8+</span>
+                                <span class="about__info-name">Expertise in different Programming languages</span>
+                            </div>
+                        </div>
+
+                        <div class="about__buttons">
+                            <a download="" href="My Resume Here" class="button button--flex">
+                                My Resume
+                                <i class="uil uil-cloud-download button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </a>
+
+        </div>
+    </section>
+
+    <!-- About -->
+    <section class="about section" id="about">
+        <h2 class="section__title">About Me</h2>
+        <span class="section__subtitle">My introduction</span>
+    </section>
+
+    <!-- Skills -->
+
+    <!-- Qualification -->
+
+    <!-- Services -->
 
     <!-- Footer -->
 
