--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+/>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +13,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
     <!-- swiper css-->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="swiper-bundle.min.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/styles.css">
@@ -16,6 +21,7 @@
     <title>Portifolio Website</title>
 </head>
 <body>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <!-- Header -->
     <header class="header" id="header">
          <nav class="nav contaier">
@@ -106,7 +112,7 @@
                         129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                         -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
 
-                        <image class="home__blob-img" x='0' y='-5' xlink:href="img/channels4_profile_1.jpg"/>
+                        <image class="home__blob-img" x='0' y='-5' xlink:href="imgs/channels4_profile_1.jpg"/>
                     </g>
                 </svg>
             </div>
@@ -124,8 +130,8 @@
         <div class="home__scroll">
             <a href="#about" class="home__scroll-button button--flex">
                 <i class="uil uil-mouse house_scroll-mouse"></i>
-                <span class="home_scroll-name">Scroll down</span>
-                <i class="uil uil-arrow-down home_scroll-arrow"></i>
+                <span class="home__scroll-name">Scroll down</span>
+                <i class="uil uil-arrow-down home__scroll-arrow"></i>
             </a>
 
         </div>
@@ -145,17 +151,17 @@
                 <div class="about__info">
                     <div>
                         <span class="about__info-title">08+</span>
-                        <span class="about__info-name">years of experience</span>
+                        <span class="about__info-name">Years<br> of experience</span>
                     </div>
 
                     <div>
                         <span class="about__info-title">10+</span>
-                        <span class="about__info-name">Completed/Ongoing Projects</span>
+                        <span class="about__info-name">Completed/Ongoing <br> Projects</span>
                     </div>
 
                     <div>
                         <span class="about__info-title">8+</span>
-                        <span class="about__info-name">Expertise in different Programming languages</span>
+                        <span class="about__info-name">Expertise <br>in different Programming languages</span>
                     </div>
                 </div>
 
@@ -452,23 +458,304 @@
     </section>
 
     <!-- Services -->
+    <section class="services section" id="services">
+        <h2 class="section__title">Beneficial Work Skills</h2>
+        <span class="section__subtitle">How I benefit your organization.</span>
 
-    
+        <div class="services__container container grid">
+            <!--Services 1-->
+            <div class="services__content">
+                <div>
+                    <i class="uil uil-briefcase-alt services__icon"></i>
+                    <h3 class="services__title">Leadership <br> Qualities</h3>
+                </div>
 
-    <!-- Porfolio -->
+                <span class="button button--flex button--small button--link services__button">
+                    Read More
+                    <i class="uil uil-arrow-right button__icon"></i>
+                </span>
+
+                <div class="services__modal">
+                    <div class="services__modal-content">
+                        <h4 class="services__modal-title">My Leadership <br> Qualities</h4>
+                        <i class="uil uil-times services__modal-close"></i>
+
+                        <ul class="services__modal-services grid">
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Reliability.</p>
+                            </li>
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Problem-Solver.</p>
+                            </li>
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Self-sufficient.</p>
+                            </li>
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Willingness to learn more.</p>
+                            </li>
+                        </ul>
+
+                    </div>
+
+                </div>
+            </div>
+
+             <!--Services 2-->
+             <div class="services__content">
+                <div>
+                    <i class="uil uil-apps services__icon"></i>
+                    <h3 class="services__title">Non-Programming<br>Softwares</h3>
+                </div>
+
+                <span class="button button--flex button--small button--link services__button">
+                    Read More
+                    <i class="uil uil-arrow-right button__icon"></i>
+                </span>
+
+                <div class="services__modal">
+                    <div class="services__modal-content">
+                        <h4 class="services__modal-title">Digital<br>Applications</h4>
+                        <i class="uil uil-times services__modal-close"></i>
+
+                        <ul class="services__modal-services grid">
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Excel</p>
+                            </li>
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Word</p>
+                            </li>
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Github</p>
+                            </li>
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Adobe library</p>
+                            </li>
+                        </ul>
+
+                    </div>
+
+                </div>
+            </div>
+
+             <!--Services 3-->
+             <div class="services__content">
+                <div>
+                    <i class="uil uil-book-open services__icon"></i>
+                    <h3 class="services__title">Relevant College<br>Coursework</h3>
+                </div>
+
+                <span class="button button--flex button--small button--link services__button">
+                    Read More
+                    <i class="uil uil-arrow-right button__icon"></i>
+                </span>
+
+                <div class="services__modal">
+                    <div class="services__modal-content">
+                        <h4 class="services__modal-title">Relevant<br>Coursework</h4>
+                        <i class="uil uil-times services__modal-close"></i>
+
+                        <ul class="services__modal-services grid">
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Java OOP</p>
+                            </li>
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Web Programming</p>
+                            </li>
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Ethical Hacking</p>
+                            </li>
+                            <li class="services__modal-services">
+                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                <p>Data structures and algorithms</p>
+                            </li>
+                        </ul>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+    </section>
 
     <!-- Project In Mind -->
+<section class="project section">
+    <div class="project__bg">
+        <div class="project__container container grid">
+            <div class="project__data">
+                <h2 class="project__title">My Interests</h2>
+                <p class="project__description">One of my major interests is anime as well as manga.</p>
 
+                <a href="#contact" class="button button--flex button--white">
+                    Contact Me
+                    <i class="uil uil-fast-mail project__icon button__icon"></i>
+                </a>
+            </div>
+
+            <img src="imgs/flcl-naota-and-guitar-6or0u0fd1mp1n4am (1).jpg" alt="" class="project__img">
+
+        </div>
+    </div>
+
+</section>
     <!-- Testimonial -->
+    <section class="testimoninal section">
+        <h2 class="section__title">My mini other Interests</h2>
+        <span class="section__subtitle">Game developemetn/Manga/Machine Learning</span>
 
+        <div class="testimoninal__container container swiper-container">
+            <div class="swiper-wrapper">
+                <!--Testimonal 1-->
+                <div class="testimoninal__content swiper-slide">
+                    <div class="testimoninal__data">
+                        <div class="testimoninal__header">
+                            <img src="imgs/game-developer-designs-model-compressor.jpg" alt="" class="testimoninal__img">
+
+                        </div>
+                    </div>
+                </div>
+                <!--Testimonal 2-->
+                <div class="testimoninal__content swiper-slide">
+                    <div class="testimoninal__data">
+                        <div class="testimoninal__header">
+                            <img src="imgs/ChainsawMan_GN01_C1_Catalog.0.jpg" alt="" class="testimoninal__img">
+
+                        </div>
+                    </div>
+                </div>
+
+                <!--Testimonal 3-->
+                <div class="testimoninal__content swiper-slide">
+                    <div class="testimoninal__data">
+                        <div class="testimoninal__header">
+                            <img src="imgs/04_thumb - Copy.jpg" alt="" class="testimoninal__img">
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+             <!-- Add Pagination -->
+             <div class="swiper-pagination swiper-pagination-testimoninal"></div>
+        </div>
+
+    </section>
     <!-- Contact Me-->
+    <!--==================== CONTACT ME ====================-->
+    <section class="contact section" id="contact">
+        <h2 class="section__title">Contact Me</h2>
+        <span class="section__subtitle">Get in touch</span>
+
+        <div class="contact__container container grid">
+            <div>
+                <div class="contact__information">
+                    <i class="uil uil-phone contact__icon"></i>
+
+                    <div>
+                        <h3 class="contact__title">Call Me At</h3>
+                        <span class="contact__subtitle">+1 346-369-2503</span>
+                    </div>
+                </div>
+
+                <div class="contact__information">
+                    <i class="uil uil-envelope contact__icon"></i>
+
+                    <div>
+                        <h3 class="contact__title">Email Me @</h3>
+                        <span class="contact__subtitle">masseymichael643@gmail.com</span>
+                    </div>
+                </div>
+
+                <div class="contact__information">
+                    <i class="uil uil-map-marker contact__icon"></i>
+
+                    <div>
+                        <h3 class="contact__title">Location</h3>
+                        <span class="contact__subtitle">Houston, Tx 77026</span>
+                    </div>
+                </div>
+
+                <form action="" class="contact__form grid">
+                    <div class="contact__inputs grid">
+                        <div class="contact__content">
+                            <label for="name" class="contact__label">Name</label>
+                            <input type="text" id="name" class="contact__input">
+                        </div>
+
+                        <div class="contact__content">
+                            <label for="email" class="contact__label">Email</label>
+                            <input type="email" id="email" class="contact__input">
+                        </div>
+                    </div>
+
+                    <div class="contact__content">
+                        <label for="project-contact" class="contact__label">Purpose</label>
+                        <input type="text" id="project-contact" class="contact__input">
+                    </div>
+
+                    <div class="contact__content">
+                        <label for="message-contact" class="contact__label">Message</label>
+                        <textarea name="" cols="0" rows="7" id="message-contact" class="contact__input"></textarea>
+                    </div>
+                    
+                    <div>
+                        <a href="#" class="button button--flex">Send Message</a>
+                        <i class="uil uil-message button__icon"></i>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+</main>
 
     <!-- Footer -->
+    <footer class="footer">
+        <div class="footer__bg">
+            <div class="footer__container container grid">
+                <h1 class="footer__title">Michael Massey</h1>
+                <span class="footer__subtitle">Fullstack Developer</span>
+            </div>
+
+            <ul class="footer__links">
+                <li>
+                    <a href="#services" class="footer__link">Work Skills</a>
+                </li>
+                <li>
+                    <a href="#skills" class="footer__link">Technical Level</a>
+                </li>
+            </ul>
+
+            <div class="footer__socials">
+                <a href="https://github.com/RanmaOVA" target="_blank" class="footer__social">
+                    <i class="uil uil-github-alt"></i>
+                </a>
+
+                <a href="https://www.linkedin.com/in/michael-massey-6aa237227/" target="_blank" class="footer__social">
+                    <i class="uil uil-linkedin"></i>   
+                </a>
+
+                <a href="https://www.youtube.com/channel/UCvt_dgfDLH6KZxfwQNnD4Dw" target="_blank" class="footer__social">
+                    <i class="uil uil-youtube"></i>
+                </a>
+            </div>
+            <p class="footer__copy">&#169; Michael Massey. All rights reserved.</p>
+        </div>
+    </footer>
 
     <!--Scroll Top -->
-
-    <!-- Swiper JS-->
-    <script src=""></script>
 
     <!-- Main JS -->
     <script src="/js/main.js"></script>
