changed a few white text

--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
     
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Cisco Packet Tracer</h3>
-                                    <span class="skills__number">80%</span>
+                                    <h3 class="skills__name">VMware</h3>
+                                    <span class="skills__number">65%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__cisco"></span>
@@ -729,7 +729,7 @@
 
                     <div>
                         <h3 class="contact__title">Location</h3>
-                        <span class="contact__subtitle">Houston, Tx 77026</span>
+                        <span class="contact__subtitle">Houston, Tx</span>
                     </div>
                 </div>
 
