added resume and a fixed a few errors

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="home__data">
                     <h1 class="home__title">This is my Offical Portifolio Website.</h1>
                 <h3 class="home__subtitle">I am an Fullstack developer</h3>
-                <p class="home__description">Associate degree of Computer Science. GPA: 3.5/3.8  </p>
+                <p class="home__description">Associate degree of Computer Science. GPA: 3.31/3.625  </p>
                     <a href="#contact" class="button button--flex">
                         Contact Me <i class="uil uil-message button__icon"></i>
                     </a>
@@ -145,7 +145,7 @@
 
                 <div class="about__info">
                     <div>
-                        <span class="about__info-title">02+</span>
+                        <span class="about__info-title">01+</span>
                         <span class="about__info-name">Years<br> of experience</span>
                     </div>
 
@@ -161,7 +161,7 @@
                 </div>
 
                 <div class="about__buttons">
-                    <a download="" href="My Resume Here" class="button button--flex">
+                    <a download="" href="assets/SWEMichael Massey.docx" class="button button--flex">
                         My Resume
                         <i class="uil uil-cloud-download button__icon"></i>
                     </a>
@@ -413,8 +413,8 @@
                     <!-- Qualification 1 -->
                     <div class="qualification__data">
                         <div>
-                            <h3 class="qualification__title">Full Responsive Website (Front-end)</h3>
-                            <span class="qualification__subtitle">Built a responsive website that allows you to navigate between pages</span>
+                            <h3 class="qualification__title">.NET Rest API (Back-end)</h3>
+                            <span class="qualification__subtitle">Created a REST API from scratch, completely written in C#</span>
                             <div class="qualification__calender">
                                 <i class="uil uil-cloud-share"></i>
             
@@ -437,8 +437,8 @@
                        </div>
 
                        <div>
-                           <h3 class="qualification__title">Created a firewall using Cisco Packet Tracer</h3>
-                           <span class="qualification__subtitle">Created a RoS using six pcs, used 192.168.1.0 network addresses with VLANs </span>
+                           <h3 class="qualification__title">Cryptocurrency Price Tracker (Front-end)</h3>
+                           <span class="qualification__subtitle">Built a simple Bitcoin cryptocurrency finance price tracker app using both React and Next JS </span>
                            <div class="qualification__calender">
                             <i class="uil uil-cloud-share"></i>
                 
