--- a/index.html
+++ b/index.html
@@ -668,6 +668,16 @@
                     </div>
                 </div>
 
+                <!--Testimonal 8.5 -->
+                <div class="testimoninal__content swiper-slide">
+                    <div class="testimoninal__data">
+                        <div class="testimoninal__header">
+                            <img src="imgs/wordcloud.jpg" alt="" class="testimoninal__img">
+
+                        </div>
+                    </div>
+                </div>
+
                 <!--Testimonal 6-->
                 <div class="testimoninal__content swiper-slide">
                     <div class="testimoninal__data">
